metadata-classic/objects/MIIncident__c.object
<CustomObject>
    <fields>
        <fullName>Tier3Notes__c</fullName>
        <description>Notes for Tier 3 Resolution</description>
        <inlineHelpText>This is an area to enter notes about a Tier 3 Resolution. Also used to explain &quot;Other&quot; removal reasons.</inlineHelpText>
        <label>Tier 3 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tier4Notes__c</fullName>
        <description>Notes for Tier 4 Resolution</description>
        <inlineHelpText>This is an area to enter notes about a Tier 4 Resolution. Also used to explain &quot;Other&quot; removal reasons.</inlineHelpText>
        <label>Tier 4 Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TimeBetweenSignupandDispute__c</fullName>
        <description>Days from when the pro signed up for TT and the dispute was reported</description>
        <label>Time Between Signup and Dispute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeInClosedHours__c</fullName>
        <description>The amount of time the MI Incident spent in a closed status.</description>
        <label>Time in Closed (Hours)</label>
        <summarizedField>MIIncidentUpdateHistory__c.DurationHours__c</summarizedField>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MI Incident Update History</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.MIIncidentPreviousStatus__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </summaryFilterItems>
        <summaryForeignKey>MIIncidentUpdateHistory__c.MIIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TimeInNewHours__c</fullName>
        <description>The time the MI Incident spent in a New status (in hours).</description>
        <label>Time in New (Hours)</label>
        <summarizedField>MIIncidentUpdateHistory__c.DurationHours__c</summarizedField>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.MIIncidentPreviousStatus__c</field>
            <operation>equals</operation>
            <value>New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MI Incident Update History</value>
        </summaryFilterItems>
        <summaryForeignKey>MIIncidentUpdateHistory__c.MIIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TimeInProgressHours__c</fullName>
        <description>The time the MI Incident spent in an &quot;In Progress&quot; status (in hours).</description>
        <label>Time in Progress (Hours)</label>
        <summarizedField>MIIncidentUpdateHistory__c.DurationHours__c</summarizedField>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.MIIncidentPreviousStatus__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MI Incident Update History</value>
        </summaryFilterItems>
        <summaryForeignKey>MIIncidentUpdateHistory__c.MIIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TimeToAgentResolutionHours__c</fullName>
        <description>The amount of time the MI Incident spent in a new or in progress status.</description>
        <formula>TimeInNewHours__c +  TimeInProgressHours__c</formula>
        <inlineHelpText>The amount of time the MI Incident spent in a new or in progress status.</inlineHelpText>
        <label>Time to Agent Resolution (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeToResolutionDays__c</fullName>
        <description>Formula field to calculate the number of days it took to resolve the MI incident.</description>
        <formula>ClosedDate__c - CreatedDate</formula>
        <inlineHelpText>The number of days it took to resolve the MI Incident.</inlineHelpText>
        <label>Time to Resolution (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeToResolutionHours__c</fullName>
        <description>Amount of hours it took to resolve the MI Incident.</description>
        <formula>(ClosedDate__c - CreatedDate)*24</formula>
        <inlineHelpText>Amount of hours it took to resolve the MI Incident.  Closed Date - Created Date</inlineHelpText>
        <label>Time to Resolution (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeinReopenedHours__c</fullName>
        <description>The amount of time (in hours) the incident spent in a reopened status.</description>
        <label>Time in Reopened (Hours)</label>
        <summarizedField>MIIncidentUpdateHistory__c.DurationHours__c</summarizedField>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>MI Incident Update History</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MIIncidentUpdateHistory__c.MIIncidentPreviousStatus__c</field>
            <operation>equals</operation>
            <value>Reopened</value>
        </summaryFilterItems>
        <summaryForeignKey>MIIncidentUpdateHistory__c.MIIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Field for legacy comp tracker timestamp column</description>
        <label>Timestamp</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TotalNumberofSuccessfulCharges__c</fullName>
        <description>Roll-up summary of the count of credit card charges that were successful.</description>
        <label>Total Number of Successful Charges</label>
        <summaryFilterItems>
            <field>MIIncidentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Charge Card</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MIIncidentAction__c.Status__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </summaryFilterItems>
        <summaryForeignKey>MIIncidentAction__c.MIIncident__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TotalPaidToPro__c</fullName>
        <description>Total amount paid by customer to pro.</description>
        <inlineHelpText>This is the total amount that the customer has paid to the professional.</inlineHelpText>
        <label>Total Paid To Pro</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalSuccessfulChargeAmount__c</fullName>
        <description>Roll-up of the successful credit card charges for the incident.</description>
        <label>Total Successful Charge Amount</label>
        <summarizedField>MIIncidentAction__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>MIIncidentAction__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Charge Card</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>MIIncidentAction__c.Status__c</field>
            <operation>equals</operation>
            <value>Successful</value>
        </summaryFilterItems>
        <summaryForeignKey>MIIncidentAction__c.MIIncident__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Field to store user name from legacy comp tracker</description>
        <label>Username</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WasProRemoved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was Pro Removed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ZenDeskTicketLink__c</fullName>
        <formula>HYPERLINK(&quot;https://thumbtack.zendesk.com/agent/tickets/&quot; &amp;  ZenDeskTicket__c , &quot;Click Here&quot; )</formula>
        <label>ZenDesk Ticket Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZenDeskTicket__c</fullName>
        <description>The ZenDesk ticket number.</description>
        <inlineHelpText>Enter the ZD ticket number here.</inlineHelpText>
        <label>ZenDesk Ticket #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bid_id__c</fullName>
        <description>External bid/quote ID from the the TT database.</description>
        <externalId>true</externalId>
        <label>bid_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>customer_id__c</fullName>
        <description>The id of the customer related to the bid_id of the incident.</description>
        <label>customer_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hired_time__c</fullName>
        <description>Populated via external object reference; used in formula fields to calculate time duration.</description>
        <label>hired_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pro_num_reviews__c</fullName>
        <description>The number of reviews the pro has received since signup (populated via trigger from external object data at the time of incident creation).</description>
        <label>pro_num_reviews</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pro_quotes_last_30__c</fullName>
        <description>The number of quotes the pro has sent for the last 30 days (populated via trigger from external object data at the time of incident creation).</description>
        <label>pro_quotes_last_30</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pro_signup_date__c</fullName>
        <label>pro_signup_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pro_user_id__c</fullName>
        <description>The id of the pro related to the bid_id of the incident.</description>
        <label>pro_user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_bid_id__c</fullName>
        <externalId>true</externalId>
        <label>quotes_bid_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>quotes_category__c</fullName>
        <label>quotes_category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_city__c</fullName>
        <label>quotes_city</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_customer_id__c</fullName>
        <label>quotes_customer_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_customer_usr_email__c</fullName>
        <label>quotes_customer_usr_email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>quotes_customer_usr_first_name__c</fullName>
        <description>quotes_customer_usr_first_name</description>
        <label>quotes_customer_usr_first_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_customer_usr_last_name__c</fullName>
        <label>quotes_customer_usr_last_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_hired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>quotes_hired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>quotes_hired_time__c</fullName>
        <label>quotes_hired_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>quotes_pro_user_id__c</fullName>
        <label>quotes_pro_user_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_pro_usr_email_c__c</fullName>
        <label>quotes_pro_usr_email__c</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>quotes_pro_usr_first_name_c__c</fullName>
        <label>quotes_pro_usr_first_name__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_pro_usr_last_name__c</fullName>
        <label>quotes_pro_usr_last_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_request_id__c</fullName>
        <label>quotes_request_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_revenue__c</fullName>
        <label>quotes_revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_review_rating__c</fullName>
        <label>quotes_review_rating</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_service_avg_rating__c</fullName>
        <label>quotes_service_avg_rating</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_service_id__c</fullName>
        <label>quotes_service_id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_service_reviews__c</fullName>
        <label>quotes_service_reviews</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>quotes_state__c</fullName>
        <label>quotes_state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quotes_zip_code__c</fullName>
        <label>quotes_zip_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>request_category__c</fullName>
        <description>The category of the request related to the bid_id of the incident; used in workflows and populated via SF Connect.</description>
        <label>request_category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>request_create_time__c</fullName>
        <label>request_create_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>request_id__c</fullName>
        <description>The external id of the request related to the bid_id for the incident.</description>
        <label>request_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requests_create_time__c</fullName>
        <label>requests_create_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>service_id__c</fullName>
        <description>The id of the service related to the bid_id of the incident.</description>
        <label>service_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MI Incident</label>
    <listViews>
        <fullName>AllClosedIncidents</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>MICategory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>ClosedDate__c</columns>
        <columns>TimeToResolutionHours__c</columns>
        <columns>TimeToResolutionDays__c</columns>
        <columns>QAForm__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>C3: All Closed Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenIncidents</fullName>
        <columns>CREATED_DATE</columns>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>Flag__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>SolutionCenterStage__c</columns>
        <columns>MICategory__c</columns>
        <columns>MISubcategory__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>ProAccount__c</columns>
        <columns>CustomerAccount__c</columns>
        <columns>AdminLinkVerificationDataPro__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OwnerFullName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,New,Reopened</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncident__c.MarketplaceIntegrity,MIIncident__c.MIIncident</value>
        </filters>
        <label>C1: All Open Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllUntouchedIncidents</fullName>
        <columns>OwnerFullName__c</columns>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>MICategory__c</columns>
        <columns>Priority__c</columns>
        <columns>SolutionCenterStage__c</columns>
        <columns>LastActionStatus__c</columns>
        <columns>NextFollowupDate__c</columns>
        <columns>NextFollowupTask__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessOrEqual</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>C2: All Untouched Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C5TSCOpenIncidents</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>SolutionCenterStage__c</columns>
        <columns>Status__c</columns>
        <columns>MICategory__c</columns>
        <columns>OwnerFullName__c</columns>
        <columns>LastActionStatus__c</columns>
        <columns>NextFollowupDate__c</columns>
        <columns>NextFollowupTask__c</columns>
        <columns>CustomerContact__c</columns>
        <columns>ProContact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,New,Reopened</value>
        </filters>
        <filters>
            <field>SolutionCenterStage__c</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>SolutionCenterStage__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>C5: TSC Open Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C6TSCClosedIncidents</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>SolutionCenterStage__c</columns>
        <columns>Status__c</columns>
        <columns>MICategory__c</columns>
        <columns>OwnerFullName__c</columns>
        <columns>LastActionStatus__c</columns>
        <columns>NextFollowupDate__c</columns>
        <columns>NextFollowupTask__c</columns>
        <columns>CustomerContact__c</columns>
        <columns>ProContact__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>SolutionCenterStage__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>C6: TSC Closed Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosedLast6Months</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>MICategory__c</columns>
        <columns>MISubcategory__c</columns>
        <columns>Status__c</columns>
        <columns>AmountInDispute__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>ClosedDate__c</columns>
        <columns>TimeToResolutionDays__c</columns>
        <columns>OutcomeCustomer__c</columns>
        <columns>OutcomePro__c</columns>
        <columns>Origin__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ClosedDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:180</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MIIncident__c.MIIncident</value>
        </filters>
        <label>C4: Closed Last 6 Months</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>LeadershipEscalatedIncidents</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>EscalationType__c</columns>
        <columns>EscalationDate__c</columns>
        <columns>MICategory__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>EscalationDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>D1: Leadership Escalated Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MoneyBackGuarantee_MIIncident</fullName>
        <filterScope>Queue</filterScope>
        <label>Money Back Guarantee</label>
        <queue>MoneyBackGuarantee</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyClosedIncidents</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>MICategory__c</columns>
        <columns>ProContact__c</columns>
        <columns>OutcomePro__c</columns>
        <columns>CustomerContact__c</columns>
        <columns>OutcomeCustomer__c</columns>
        <columns>ClosedDate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>QAForm__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>B5: My Closed Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpenIncidents</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>Flag__c</columns>
        <columns>Status__c</columns>
        <columns>LastActionStatus__c</columns>
        <columns>CustomerContact__c</columns>
        <columns>ProContact__c</columns>
        <columns>SolutionCenterStage__c</columns>
        <columns>MICategory__c</columns>
        <columns>NextFollowupDate__c</columns>
        <columns>NextFollowupTask__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress,New,Reopened</value>
        </filters>
        <label>B1: My Open Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTasksAllOpen</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>NextFollowupDate__c</columns>
        <columns>NextFollowupTask__c</columns>
        <columns>Flag__c</columns>
        <columns>MICategory__c</columns>
        <columns>CustomerContact__c</columns>
        <columns>ProContact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NextFollowupDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>B3: My Tasks - All Open</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyTasksDueFollowUpToday</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>NextFollowupDate__c</columns>
        <columns>NextFollowupTask__c</columns>
        <columns>Flag__c</columns>
        <columns>LastActionStatus__c</columns>
        <columns>MICategory__c</columns>
        <columns>CustomerContact__c</columns>
        <columns>ProContact__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NextFollowupDate__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>B2: My Tasks - Follow-up Today</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyUntouchedIncidents</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>MICategory__c</columns>
        <columns>Priority__c</columns>
        <columns>LastActionStatus__c</columns>
        <columns>NextFollowupDate__c</columns>
        <columns>NextFollowupTask__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>lessOrEqual</operation>
            <value>N_DAYS_AGO:7</value>
        </filters>
        <label>B4: My Untouched Incidents</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UnassignedConcerningReviews</fullName>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Immediate Review Pro Acct Status</value>
        </filters>
        <label>A6: Unassigned Concerning Reviews</label>
        <queue>ProactiveMIQueue</queue>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UnassignedHighVolumeAccounts</fullName>
        <booleanFilter>1 AND (2 OR 4) AND 3</booleanFilter>
        <columns>IncidentNumber__c</columns>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Origin__c</columns>
        <columns>AmountRange__c</columns>
        <columns>pro_quotes_last_30__c</columns>
        <columns>ProIsHighVolumeAccount__c</columns>
        <columns>FirstCaseCreatedDate__c</columns>
        <columns>FirstCaseTransferredtoMIDate__c</columns>
        <columns>CreatedDateTime__c</columns>
        <columns>OwnerFullName__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>ProIsHighVolumeAccount__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OwnerisQueue__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Routing__c</field>
            <operation>equals</operation>
            <value>Managed Account</value>
        </filters>
        <label>A5: Unassigned High Volume Accounts</label>
        <sharedTo>
            <role>CustomerSuccessOrganization</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Incident Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MI Incidents</pluralLabel>
    <recordTypes>
        <fullName>Confidential</fullName>
        <active>true</active>
        <description>Record type used to manage highly sensitive dispute incidents.  Strict record sharing for this record type.</description>
        <label>Confidential</label>
    </recordTypes>
    <recordTypes>
        <fullName>MIIncident</fullName>
        <active>true</active>
        <description>Record type used to manage the disputes between a pro and customer on Thumbtack.</description>
        <label>MI Incident</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarketplaceIntegrity</fullName>
        <active>true</active>
        <description>Record Type for MI Incidents</description>
        <label>Marketplace Integrity</label>
    </recordTypes>
    <recordTypes>
        <fullName>MarketplaceIntegrityRestricted</fullName>
        <active>true</active>
        <description>Record type used to manage the incidents that need the mid-level of record access security.</description>
        <label>Marketplace Integrity Restricted</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ClosedIncidentRequiresOwnership</fullName>
        <active>true</active>
        <description>Owner can not be a queue when closing an incident.</description>
        <errorConditionFormula>AND( NOT ISBLANK ( Owner:Queue.Id ) , 
        ISPICKVAL(Status__c, &quot;Closed&quot;), 
        $UserRole.Name &lt;&gt; &quot;System Level Access&quot;
)</errorConditionFormula>
        <errorMessage>This incident is currently owned by a Queue. Please take ownership of this incident before closing.</errorMessage>
    </validationRules>
</CustomObject>